--- a/backend/.env
+++ b/backend/.env
@@ -1,15 +1,20 @@
+# Server
 PORT = 5000
+NODE_ENV = development
+
+# MongoDB
 MONGODB_URI=mongodb+srv://vuhuq2104:MVBBR4q4dlRTPccO@cluster0.aohdk.mongodb.net/mu6_db?retryWrites=true&w=majority&appName=Cluster0
 
 ADMIN_EMAIL = vuhuq2104@gmail.com
 
+# Cloudinary - lưu trữ bài hát, album
 CLOUDINARY_API_KEY = 937463668179124
 CLOUDINARY_API_SECRET = PsBtyYfE0fo-RWoynXmgTxF7_q8
 CLOUDINARY_CLOUD_NAME = dthoethgw
 
-NODE_ENV = development
 
+# Clerk - xác thực người dùng
 CLERK_PUBLISHABLE_KEY=pk_test_Z2FtZS1tYXJtb3QtNjkuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_dsd86widlRJAGclejD193aZiTxVwkhUYRnVHnS4xWT
 
-# .env.local: VITE_CLERK_PUBLISHABLE_KEY=pk_test_Z2FtZS1tYXJtb3QtNjkuY2xlcmsuYWNjb3VudHMuZGV2JA
+# ./frontend/.env.local: VITE_CLERK_PUBLISHABLE_KEY=pk_test_Z2FtZS1tYXJtb3QtNjkuY2xlcmsuYWNjb3VudHMuZGV2JA
